# Gitops_drift_controller

./: .gitignore  DESIGN.md  Dockerfile  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
examples/desired/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
examples/drifted/: deployment-drift.yaml
scripts/: cleanup.sh  demo-drift.sh  docker-demo.sh  e2e-kind.sh  inject-drift.sh  setup-kind.sh
src/gitops_drift/: __init__.py  config.py  diff_engine.py  kubernetes_client.py  loader.py  main.py  normalizer.py  reconciler.py  remediator.py  reporter.py
tests/: test_diff_engine.py  test_exclusions.py  test_kubernetes_client.py  test_loader.py  test_main.py  test_normalizer.py  test_reconciler.py  test_remediator.py  test_reporter.py
